fix blurry LED drawing performance problem, back at smooth 120FPS (frame time 2.5ms on M1 Pro)

--- a/simulator/lolly.css
+++ b/simulator/lolly.css
@@ -11,6 +11,7 @@ a {
 
 #lollycanvas {
     margin-top: 2em;
+    filter: blur(8px);
 }
 
 #description {
